API_KEY.kt and Cleanup

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,8 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
+        
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -87,5 +88,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.2.50"
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
+    implementation 'com.android.support:multidex:1.0.3'
+
+
 
 }
