--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="adeel.moviedb">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,7 +13,17 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ui.main.views.activities.SettingsActivity"></activity>
         <activity android:name=".ui.main.views.activities.DetailActivity" />
-        <activity android:name=".ui.main.views.activities.SearchActivity" />
+        <activity
+            android:name=".ui.main.views.activities.SearchActivity"
+            android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
         <activity android:name=".ui.main.views.activities.MoviesActivity" />
         <activity android:name=".ui.main.views.activities.CoroutinesSplashActivity">
             <intent-filter>
